--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,12 @@ body {
 .rotate img{
   width: 35vw;
 }
+.logo{
+  background-color: black;
+  width: 100%;
+  height: 50px;
+}
+a , img{
+  height: 100%;
+  width: 100%;
+}
